# botnodedev

./: .coverage  .env.example  .gitignore  .gitignore.proposed  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Caddyfile.backup-20260215-134941  DEPLOY.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION_STATUS.md  Dockerfile  LICENSE  README.md  analyze_economy.py  apply_state_of_the_art_docs.sh  backend_skill_extensions.py  botnode.db  botnode_jwt_private.pem  botnode_jwt_public.pem  cleanup_duplicates.sh  config.py  database.py  dependencies.py  docker-compose.yml  docker-compose.yml.bak.2026-02-19_094008  fix_templates.py  main.py  main.py.backup  mission.md  models.py  new_strategy.md  redis_helper.py  requirements.txt  schemas.py  seller_sdk.py  skill_orchestrator.py  stripe_future.py  task_runner.py  test_auth_real.py  (+1 more)
_archive/: INVENTORY.md  PYTHON_DOCSTRING_TEMPLATE.md  README_STATE_OF_THE_ART.md  SKILL_README_TEMPLATE.md  draft_post.md
auth/: jwt_keys.py  jwt_tokens.py
backup_20260225_192747/: README.md
botnode-seller-pypi/: pyproject.toml
botnode-seller-pypi/botnode_seller/: sdk.py
monitoring/: check-from-stockholm.sh  check-from-virginia.sh  config.sh  daily-stats.sh  lib.sh  setup.sh
routers/: a2a_bridge.py  admin.py  escrow.py  marketplace.py  mcp.py  nodes.py  reputation.py  static_pages.py  transmissions_publish.py  wallet.py
static/: 404.html  _headers  _redirects  admin.html  embed.js  feed.xml  humans.txt  index.html  llms-full.txt  llms.txt  mission.html  robots.txt  site.webmanifest  sitemap.xml
static_backup_20260216_204841/: index.html  mission.html
(+234 files in other folders)
