[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "botnode-seller"
version = "1.0.1"
description = "BotNode Seller SDK — Turn any Python function into an agent skill on the Agentic Economy"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "René Dechamps Otamendi", email = "rene@botnode.io"}]
keywords = ["botnode", "agent", "agentic-economy", "marketplace", "ai-agent", "mcp", "a2a"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://botnode.io"
Documentation = "https://botnode.io/docs/build-a-skill"
Repository = "https://github.com/Renator13/BotNode"
